--- a/Hovos/Base.lproj/Main.storyboard
+++ b/Hovos/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="uMv-Dm-3P3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="twA-5N-1eG">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -274,7 +274,7 @@
                                                 </cells>
                                             </collectionView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="orangeAngle" translatesAutoresizingMaskIntoConstraints="NO" id="ecO-S3-lTE">
-                                                <rect key="frame" x="291" y="10" width="64" height="30"/>
+                                                <rect key="frame" x="323" y="10" width="32" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="UTk-UB-M3Q"/>
                                                 </constraints>
@@ -371,7 +371,7 @@
                                                 </cells>
                                             </collectionView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blueAngle" translatesAutoresizingMaskIntoConstraints="NO" id="wdg-KU-nxD">
-                                                <rect key="frame" x="291" y="10" width="64" height="30"/>
+                                                <rect key="frame" x="323" y="10" width="32" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="Rxm-MC-Bh3"/>
                                                 </constraints>
@@ -1610,6 +1610,147 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nfO-7I-ZWL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4469.6000000000004" y="126.38680659670166"/>
+        </scene>
+        <!--Change PasswordVC-->
+        <scene sceneID="G2r-9y-PA3">
+            <objects>
+                <viewController storyboardIdentifier="ChangePasswordVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ecE-3j-yNl" customClass="ChangePasswordVC" customModule="Hovos" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9zN-DJ-m8a">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bxs-Py-fma">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hovos_logo" translatesAutoresizingMaskIntoConstraints="NO" id="trj-7C-fUd">
+                                <rect key="frame" x="112.5" y="78.5" width="150" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="4Uh-CT-4Q0"/>
+                                    <constraint firstAttribute="width" constant="150" id="c0G-Gz-KmI"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SXt-hc-Xj0">
+                                <rect key="frame" x="20" y="258.5" width="335" height="43.5"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="New password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cKM-Sm-bEz">
+                                        <rect key="frame" x="10" y="10.5" width="280" height="22"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eyeprotected" translatesAutoresizingMaskIntoConstraints="NO" id="ZfY-q3-PPt">
+                                        <rect key="frame" x="300" y="9" width="25" height="25"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="25" id="Gsx-mk-pAE"/>
+                                            <constraint firstAttribute="height" constant="25" id="zxd-84-ooL"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="ZfY-q3-PPt" firstAttribute="leading" secondItem="cKM-Sm-bEz" secondAttribute="trailing" constant="10" id="04e-0m-uCB"/>
+                                    <constraint firstItem="ZfY-q3-PPt" firstAttribute="centerY" secondItem="SXt-hc-Xj0" secondAttribute="centerY" id="CdX-L8-ZDn"/>
+                                    <constraint firstItem="cKM-Sm-bEz" firstAttribute="leading" secondItem="SXt-hc-Xj0" secondAttribute="leading" constant="10" id="SXY-VS-bj9"/>
+                                    <constraint firstAttribute="trailing" secondItem="ZfY-q3-PPt" secondAttribute="trailing" constant="10" id="aIN-3D-NNh"/>
+                                    <constraint firstItem="cKM-Sm-bEz" firstAttribute="centerY" secondItem="SXt-hc-Xj0" secondAttribute="centerY" id="mte-se-7tl"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                        <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="border">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zfB-8C-JuR">
+                                <rect key="frame" x="20" y="312" width="335" height="43"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eyeprotected" translatesAutoresizingMaskIntoConstraints="NO" id="g1F-Ix-ye3">
+                                        <rect key="frame" x="300" y="9" width="25" height="25"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="25" id="E60-HY-1RL"/>
+                                            <constraint firstAttribute="height" constant="25" id="fUh-Rq-DIH"/>
+                                        </constraints>
+                                    </imageView>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c18-ub-uLk">
+                                        <rect key="frame" x="10" y="10.5" width="285" height="22"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="g1F-Ix-ye3" secondAttribute="trailing" constant="10" id="51F-Fv-x64"/>
+                                    <constraint firstItem="c18-ub-uLk" firstAttribute="leading" secondItem="zfB-8C-JuR" secondAttribute="leading" constant="10" id="5cm-SN-hlW"/>
+                                    <constraint firstItem="g1F-Ix-ye3" firstAttribute="leading" secondItem="c18-ub-uLk" secondAttribute="trailing" constant="5" id="VLz-qN-rOm"/>
+                                    <constraint firstItem="c18-ub-uLk" firstAttribute="centerY" secondItem="zfB-8C-JuR" secondAttribute="centerY" id="sff-mJ-DiX"/>
+                                    <constraint firstItem="g1F-Ix-ye3" firstAttribute="centerY" secondItem="zfB-8C-JuR" secondAttribute="centerY" id="uVk-9e-Bcb"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                        <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="border">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hdS-sa-M5g">
+                                <rect key="frame" x="20" y="385" width="335" height="43.5"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aNC-vk-Bgg">
+                                        <rect key="frame" x="0.0" y="4" width="335" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                        <state key="normal" title="CONFIRM">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="changePassword:" destination="ecE-3j-yNl" eventType="touchUpInside" id="xRr-Xi-ZdG"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" name="orangeColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="aNC-vk-Bgg" secondAttribute="trailing" id="7a7-29-C1c"/>
+                                    <constraint firstItem="aNC-vk-Bgg" firstAttribute="centerX" secondItem="hdS-sa-M5g" secondAttribute="centerX" id="aLp-fT-KdA"/>
+                                    <constraint firstItem="aNC-vk-Bgg" firstAttribute="centerY" secondItem="hdS-sa-M5g" secondAttribute="centerY" id="y00-kj-DzH"/>
+                                    <constraint firstItem="aNC-vk-Bgg" firstAttribute="leading" secondItem="hdS-sa-M5g" secondAttribute="leading" id="zCH-Z0-rTw"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="SXt-hc-Xj0" firstAttribute="height" secondItem="hdS-sa-M5g" secondAttribute="height" id="Eil-zi-bgZ"/>
+                            <constraint firstItem="bxs-Py-fma" firstAttribute="trailing" secondItem="1by-yM-3od" secondAttribute="trailing" id="Hab-94-ndi"/>
+                            <constraint firstItem="zfB-8C-JuR" firstAttribute="top" secondItem="SXt-hc-Xj0" secondAttribute="bottom" constant="10" id="HrC-TQ-0hS"/>
+                            <constraint firstItem="1by-yM-3od" firstAttribute="trailing" secondItem="SXt-hc-Xj0" secondAttribute="trailing" constant="20" id="J0n-If-QR3"/>
+                            <constraint firstItem="hdS-sa-M5g" firstAttribute="top" secondItem="zfB-8C-JuR" secondAttribute="bottom" constant="30" id="NWy-d5-TQ5"/>
+                            <constraint firstItem="SXt-hc-Xj0" firstAttribute="leading" secondItem="1by-yM-3od" secondAttribute="leading" constant="20" id="QUl-yM-Q0M"/>
+                            <constraint firstItem="trj-7C-fUd" firstAttribute="centerX" secondItem="9zN-DJ-m8a" secondAttribute="centerX" id="RfV-6G-TU4"/>
+                            <constraint firstItem="SXt-hc-Xj0" firstAttribute="height" secondItem="zfB-8C-JuR" secondAttribute="height" id="Wvm-F3-BYw"/>
+                            <constraint firstItem="SXt-hc-Xj0" firstAttribute="top" secondItem="trj-7C-fUd" secondAttribute="bottom" constant="30" id="Z71-AX-Bqz"/>
+                            <constraint firstItem="bxs-Py-fma" firstAttribute="leading" secondItem="1by-yM-3od" secondAttribute="leading" id="cZr-bc-D50"/>
+                            <constraint firstItem="zfB-8C-JuR" firstAttribute="centerY" secondItem="9zN-DJ-m8a" secondAttribute="centerY" id="f43-P9-QsI"/>
+                            <constraint firstItem="SXt-hc-Xj0" firstAttribute="height" secondItem="bxs-Py-fma" secondAttribute="height" multiplier="0.065" id="fZr-Um-L0y"/>
+                            <constraint firstItem="hdS-sa-M5g" firstAttribute="leading" secondItem="1by-yM-3od" secondAttribute="leading" constant="20" id="hTU-xB-0mX"/>
+                            <constraint firstItem="zfB-8C-JuR" firstAttribute="leading" secondItem="1by-yM-3od" secondAttribute="leading" constant="20" id="lf2-cD-f2N"/>
+                            <constraint firstItem="1by-yM-3od" firstAttribute="trailing" secondItem="hdS-sa-M5g" secondAttribute="trailing" constant="20" id="m9h-Hs-i6h"/>
+                            <constraint firstItem="bxs-Py-fma" firstAttribute="bottom" secondItem="1by-yM-3od" secondAttribute="bottom" id="mig-pF-ZhK"/>
+                            <constraint firstItem="1by-yM-3od" firstAttribute="trailing" secondItem="zfB-8C-JuR" secondAttribute="trailing" constant="20" id="vZq-3S-9w0"/>
+                            <constraint firstItem="bxs-Py-fma" firstAttribute="top" secondItem="1by-yM-3od" secondAttribute="top" id="xIw-15-TZh"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="1by-yM-3od"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="SFf-me-gqg"/>
+                    <connections>
+                        <outlet property="confirmPassword" destination="c18-ub-uLk" id="xcd-aM-Ycf"/>
+                        <outlet property="newPassword" destination="cKM-Sm-bEz" id="VyV-b1-J7q"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qVt-of-Hoc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5306" y="126"/>
         </scene>
     </scenes>
     <resources>
