--- a/Hovos/MenuVC.xib
+++ b/Hovos/MenuVC.xib
@@ -35,7 +35,7 @@
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </tableView>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" red="0.94117647058823528" green="0.96078431372549022" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="100" id="Qs7-VI-okM"/>
                         <constraint firstItem="8TH-Mi-k9y" firstAttribute="leading" secondItem="eHB-g2-8b9" secondAttribute="leading" id="ccN-Vb-Nfe"/>
