--- a/Hovos/Base.lproj/Main.storyboard
+++ b/Hovos/Base.lproj/Main.storyboard
@@ -2120,7 +2120,7 @@
         <!--VolunteerVC-->
         <scene sceneID="9lw-pa-VvP">
             <objects>
-                <viewController id="8mT-rC-Ozh" customClass="VolunteerVC" customModule="Hovos" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="VolunteerVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="8mT-rC-Ozh" customClass="VolunteerVC" customModule="Hovos" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="pUA-P4-e2I">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -2379,14 +2379,14 @@
                                                                     </constraints>
                                                                     <prototypes>
                                                                         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CountryCell" id="Fsq-pZ-KYG" customClass="CountryCell" customModule="Hovos" customModuleProvider="target">
-                                                                            <rect key="frame" x="0.0" y="28" width="395" height="44"/>
+                                                                            <rect key="frame" x="0.0" y="28" width="395" height="43.666667938232422"/>
                                                                             <autoresizingMask key="autoresizingMask"/>
                                                                             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Fsq-pZ-KYG" id="tii-70-CSk">
-                                                                                <rect key="frame" x="0.0" y="0.0" width="395" height="44"/>
+                                                                                <rect key="frame" x="0.0" y="0.0" width="395" height="43.666667938232422"/>
                                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                                 <subviews>
                                                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blueAngle" translatesAutoresizingMaskIntoConstraints="NO" id="5wi-nC-LzU">
-                                                                                        <rect key="frame" x="0.0" y="9.6666666666666643" width="25" height="25"/>
+                                                                                        <rect key="frame" x="0.0" y="9.3333333333333357" width="25" height="25"/>
                                                                                         <constraints>
                                                                                             <constraint firstAttribute="height" constant="25" id="YFH-nn-uTO"/>
                                                                                             <constraint firstAttribute="width" constant="25" id="o66-Wk-zvE"/>
@@ -2714,7 +2714,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sla-vb-DYu">
                                 <rect key="frame" x="0.0" y="812" width="414" height="50"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UFn-uP-HBH">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UFn-uP-HBH">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="1"/>
                                         <color key="backgroundColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
@@ -2724,35 +2724,40 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pH0-W5-pMZ">
-                                        <rect key="frame" x="284" y="12.666666666666629" width="30" height="25"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pH0-W5-pMZ">
+                                        <rect key="frame" x="261" y="12.666666666666629" width="30" height="25"/>
                                         <state key="normal" image="heart"/>
+                                        <state key="selected" image="heart_checked"/>
+                                        <connections>
+                                            <action selector="favSelected:" destination="8mT-rC-Ozh" eventType="touchUpInside" id="RoD-gO-Ybr"/>
+                                        </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iP6-YN-ILy">
-                                        <rect key="frame" x="186" y="9" width="42" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CONTACT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iP6-YN-ILy">
+                                        <rect key="frame" x="168" y="6" width="78" height="39"/>
+                                        <color key="backgroundColor" name="greenColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B3c-Zx-EeL">
-                                        <rect key="frame" x="192" y="10" width="30" height="30"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <inset key="titleEdgeInsets" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
-                                        <state key="normal">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f9g-Om-eDo">
+                                        <rect key="frame" x="168" y="6" width="78" height="39"/>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
+                                    <constraint firstItem="f9g-Om-eDo" firstAttribute="width" secondItem="iP6-YN-ILy" secondAttribute="width" id="4xb-yZ-Y3m"/>
                                     <constraint firstAttribute="trailing" secondItem="UFn-uP-HBH" secondAttribute="trailing" id="Agc-ad-MkV"/>
+                                    <constraint firstAttribute="bottom" secondItem="iP6-YN-ILy" secondAttribute="bottom" constant="5" id="EX5-aZ-xPz"/>
+                                    <constraint firstItem="pH0-W5-pMZ" firstAttribute="leading" secondItem="iP6-YN-ILy" secondAttribute="trailing" constant="15" id="Lbd-a7-GMP"/>
+                                    <constraint firstItem="pH0-W5-pMZ" firstAttribute="centerY" secondItem="Sla-vb-DYu" secondAttribute="centerY" id="UfS-HO-y4E"/>
                                     <constraint firstAttribute="height" constant="50" id="Zwn-D2-daG"/>
+                                    <constraint firstItem="iP6-YN-ILy" firstAttribute="top" secondItem="UFn-uP-HBH" secondAttribute="bottom" constant="5" id="bz2-cc-P1Q"/>
+                                    <constraint firstItem="iP6-YN-ILy" firstAttribute="centerX" secondItem="Sla-vb-DYu" secondAttribute="centerX" id="fU9-SB-9o8"/>
                                     <constraint firstItem="UFn-uP-HBH" firstAttribute="leading" secondItem="Sla-vb-DYu" secondAttribute="leading" id="fuI-Rk-IpP"/>
-                                    <constraint firstItem="B3c-Zx-EeL" firstAttribute="centerY" secondItem="Sla-vb-DYu" secondAttribute="centerY" id="hjR-eM-fAI"/>
+                                    <constraint firstItem="f9g-Om-eDo" firstAttribute="top" secondItem="iP6-YN-ILy" secondAttribute="top" id="oIl-uF-Jvx"/>
                                     <constraint firstItem="UFn-uP-HBH" firstAttribute="top" secondItem="Sla-vb-DYu" secondAttribute="top" id="oXH-BP-Bxb"/>
-                                    <constraint firstItem="B3c-Zx-EeL" firstAttribute="centerX" secondItem="Sla-vb-DYu" secondAttribute="centerX" id="tyI-w1-cg1"/>
+                                    <constraint firstItem="f9g-Om-eDo" firstAttribute="height" secondItem="iP6-YN-ILy" secondAttribute="height" id="uu8-KI-sho"/>
+                                    <constraint firstItem="f9g-Om-eDo" firstAttribute="leading" secondItem="iP6-YN-ILy" secondAttribute="leading" id="zEe-df-N51"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -2773,6 +2778,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="HVy-e8-xmn"/>
                     <connections>
+                        <outlet property="collView" destination="oSZ-Jn-KY6" id="my9-Q2-4bo"/>
+                        <outlet property="footerlabel" destination="iP6-YN-ILy" id="EvW-oh-Lwj"/>
                         <outlet property="titleLabel" destination="Dks-Ly-Jba" id="Lht-XZ-fId"/>
                     </connections>
                 </viewController>
@@ -2794,6 +2801,7 @@
         <image name="google" width="64" height="64"/>
         <image name="h_small7" width="41" height="48"/>
         <image name="heart" width="30" height="25"/>
+        <image name="heart_checked" width="30" height="25"/>
         <image name="hovos_logo" width="191" height="82"/>
         <image name="loc123" width="64" height="64"/>
         <image name="menu" width="512" height="512"/>
