--- a/Hovos/Views/ContinentView.xib
+++ b/Hovos/Views/ContinentView.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,7 +16,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ContinentView" customModule="Hovos" customModuleProvider="target">
             <connections>
+                <outlet property="heightConstraint" destination="e2X-Vj-mpK" id="Afp-l1-xDG"/>
                 <outlet property="tbl" destination="Ejf-fL-c6E" id="xT3-e7-vBZ"/>
+                <outlet property="ttlLabel" destination="Lyx-AT-Hzl" id="euq-CQ-ak5"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -33,27 +36,60 @@
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5l4-mI-LPa">
                     <rect key="frame" x="37.5" y="100" width="300" height="500"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Continents" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lyx-AT-Hzl">
-                            <rect key="frame" x="15" y="15" width="116" height="29"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Continents" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Lyx-AT-Hzl">
+                            <rect key="frame" x="15" y="15" width="270" height="28"/>
                             <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="24"/>
-                            <color key="textColor" red="0.14901960780000001" green="0.1960784314" blue="0.21960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="textColor" name="orangeColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ejf-fL-c6E">
-                            <rect key="frame" x="15" y="59" width="270" height="426"/>
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ejf-fL-c6E">
+                            <rect key="frame" x="15" y="58" width="270" height="422"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         </tableView>
+                        <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1G8-Ni-anW">
+                            <rect key="frame" x="10" y="490" width="135" height="0.0"/>
+                            <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="15"/>
+                            <state key="normal" title="CANCEL">
+                                <color key="titleColor" name="orangeColor"/>
+                            </state>
+                            <connections>
+                                <action selector="dismiss:" destination="-1" eventType="touchUpInside" id="Q48-dl-m8o"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E0l-h1-KtZ">
+                            <rect key="frame" x="155" y="490" width="135" height="0.0"/>
+                            <color key="backgroundColor" name="orangeColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" id="e2X-Vj-mpK"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="15"/>
+                            <state key="normal" title="SELECT">
+                                <color key="titleColor" red="0.98039215690000003" green="0.96078431369999995" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="selectAction:" destination="-1" eventType="touchUpInside" id="k4f-Sy-NQw"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="300" id="1AX-mc-1Pu"/>
+                        <constraint firstItem="1G8-Ni-anW" firstAttribute="top" secondItem="Ejf-fL-c6E" secondAttribute="bottom" constant="10" id="2Rw-rY-pNU"/>
+                        <constraint firstItem="1G8-Ni-anW" firstAttribute="leading" secondItem="5l4-mI-LPa" secondAttribute="leading" constant="10" id="5QC-rT-65e"/>
                         <constraint firstItem="Lyx-AT-Hzl" firstAttribute="leading" secondItem="5l4-mI-LPa" secondAttribute="leading" constant="15" id="B7L-sR-OB6"/>
                         <constraint firstItem="Lyx-AT-Hzl" firstAttribute="top" secondItem="5l4-mI-LPa" secondAttribute="top" constant="15" id="Kxm-XB-9RC"/>
-                        <constraint firstAttribute="bottom" secondItem="Ejf-fL-c6E" secondAttribute="bottom" constant="15" id="P1O-u1-LPp"/>
+                        <constraint firstAttribute="bottom" secondItem="E0l-h1-KtZ" secondAttribute="bottom" constant="10" id="N0z-EU-amY"/>
+                        <constraint firstItem="Lyx-AT-Hzl" firstAttribute="trailing" secondItem="Ejf-fL-c6E" secondAttribute="trailing" id="a0h-n5-rq8"/>
                         <constraint firstItem="Ejf-fL-c6E" firstAttribute="top" secondItem="Lyx-AT-Hzl" secondAttribute="bottom" constant="15" id="bZw-yt-3lU"/>
+                        <constraint firstItem="E0l-h1-KtZ" firstAttribute="top" secondItem="Ejf-fL-c6E" secondAttribute="bottom" constant="10" id="bq0-wz-WGd"/>
                         <constraint firstAttribute="trailing" secondItem="Ejf-fL-c6E" secondAttribute="trailing" constant="15" id="dRe-oh-wi5"/>
                         <constraint firstAttribute="height" constant="500" id="hf6-uE-lR2"/>
+                        <constraint firstItem="1G8-Ni-anW" firstAttribute="width" secondItem="E0l-h1-KtZ" secondAttribute="width" id="lPh-Pd-Sa7"/>
+                        <constraint firstAttribute="trailing" secondItem="E0l-h1-KtZ" secondAttribute="trailing" constant="10" id="nWY-aV-lfi"/>
+                        <constraint firstItem="1G8-Ni-anW" firstAttribute="height" secondItem="E0l-h1-KtZ" secondAttribute="height" id="oVJ-or-pxG"/>
                         <constraint firstItem="Ejf-fL-c6E" firstAttribute="leading" secondItem="5l4-mI-LPa" secondAttribute="leading" constant="15" id="qgM-sg-p5d"/>
+                        <constraint firstAttribute="bottom" secondItem="1G8-Ni-anW" secondAttribute="bottom" constant="10" id="rYu-2r-2P9"/>
+                        <constraint firstItem="E0l-h1-KtZ" firstAttribute="leading" secondItem="1G8-Ni-anW" secondAttribute="trailing" constant="10" id="uT3-u4-5mC"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="corners">
@@ -72,7 +108,12 @@
                 <constraint firstItem="p7f-7h-vg1" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="ncp-4e-aF3"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="137.68115942028987" y="114.50892857142857"/>
+            <point key="canvasLocation" x="136.80000000000001" y="113.79310344827587"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="orangeColor">
+            <color red="1" green="0.35294117647058826" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
